# rag-project

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: doc1.txt  doc2.txt  doc3.txt
src/: app.py  app_gradio.py  document_loader.py  generator.py  retriever.py  text_splitter.py
tests/: test_donwload_model.py  test_embeddings_generation.py  test_faiss_index.py  test_model_initialization.py  test_pdf_loading.py  test_pdf_loading2.py  test_text_splitting.py
